add detail writer and item writer

--- a/src/app/components/writer/list-writer/list-writer.component.css
+++ b/src/app/components/writer/list-writer/list-writer.component.css
@@ -4,20 +4,11 @@
   justify-content: center;
 }
 
-.writer{
-  padding: 1em;
-  justify-content: center;
-  width: 250px;
-  margin: 10px;
-  border: 1px solid grey;
-  border-radius: 1em;
-}
-
-.writers img{
-  width: 100%;
-}
-
 select{
   padding: 5px;
-  
+
+}
+
+app-item-writer{
+  cursor: pointer;
 }
