--- a/src/app/components/writer/list-writer/list-writer.component.html
+++ b/src/app/components/writer/list-writer/list-writer.component.html
@@ -6,11 +6,5 @@
   <option value="chile">Chile</option>
 </select>
 <div class="writers">
-  <div class="writer" *ngFor="let writer of writers">
-    <img [src]="writer.imagen" [alt]="writer.nombre" />
-    <h1>{{ writer.nombre }} {{ writer.apellidos }}</h1>
-    <p>
-      {{ writer.pais | titlecase }}
-    </p>
-  </div>
+  <app-item-writer *ngFor="let writer of writers" [writer]="writer" [routerLink]="['/escritor', writer.id]"></app-item-writer>
 </div>
