add detail writer and show books

--- a/src/app/components/writer/detail-writer/detail-writer.component.html
+++ b/src/app/components/writer/detail-writer/detail-writer.component.html
@@ -1,1 +1,8 @@
-<app-item-writer [writer]="writer"></app-item-writer>
+<div class="container">
+  <div class="writer">
+    <app-item-writer [writer]="writer"></app-item-writer>
+  </div>
+  <div class="books">
+    <router-outlet></router-outlet>
+  </div>
+</div>
