--- a/src/app/components/writer/list-writer/list-writer.component.html
+++ b/src/app/components/writer/list-writer/list-writer.component.html
@@ -1,10 +1,13 @@
-<select name="country" (change)="onChangeList($event)">
-  <option value="todos">Todos</option>
-  <option value="españa">España</option>
-  <option value="canadá">Canadá</option>
-  <option value="reino unido">Reino Unido</option>
-  <option value="chile">Chile</option>
-</select>
+<div class="div d-flex justify-content-between p-2">
+  <select name="country" (change)="onChangeList($event)">
+    <option value="todos">Todos</option>
+    <option value="españa">España</option>
+    <option value="canadá">Canadá</option>
+    <option value="reino unido">Reino Unido</option>
+    <option value="chile">Chile</option>
+  </select>
+  <a [routerLink]="['/escritor', 'crear']" class="btn btn-primary">Añadir escritor</a>
+</div>
 <div class="writers">
   <app-item-writer *ngFor="let writer of writers" [writer]="writer" [routerLink]="['/escritor', writer.id, 'book']"></app-item-writer>
 </div>
