add module list animated characters

--- a/src/app/components/writer/list-writer/list-writer.component.html
+++ b/src/app/components/writer/list-writer/list-writer.component.html
@@ -9,8 +9,9 @@
         <option value="chile">Chile</option>
       </select>
       <div>
-        <a [routerLink]="['/escritor', 'crear']" class="btn btn-primary mr-1">Añadir escritor</a>
-        <a [routerLink]="['/paises']" class="btn btn-info">País</a>
+        <a [routerLink]="['/escritor', 'crear']" class="btn btn-primary ">Añadir escritor</a>
+        <a [routerLink]="['/paises']" class="btn btn-primary mx-1">Paises</a>
+        <a [routerLink]="['/character']" class="btn btn-primary">Personajes animados</a>
       </div>
     </div>
   </div>
